<resources>
    <string name="app_name">Registro Dental</string>
    <string name="btn_login">Ingresar</string>
    <string name="hint_txt_usuario">Correo</string>
    <string name="hint_txt_clave">Contraseña</string>
    <string name="tag_login_registrarse"><u>regístrate.</u></string>
    <string name="tag_login_no">¿no estas registado?,\ </string>
    <string name="str_loading_login">Validando usuario...</string>
    <string name="str_title_alert_error_login">Login</string>
    <string name="str_msj_alert_error_login">Usuario no registrado.</string>
    <string name="ok">Ok</string>
    <string name="str_campo_requerido">Campo requerido.</string>
    <string name="name_preference_user">Usuario</string>
    <string name="name_preference_user_codigo">codigo</string>
    <string name="name_preference_user_logueado">logueado</string>
    <string name="hint_txt_nombre1">Primer nombre</string>
    <string name="hint_txt_nombre2">Segundo nombre</string>
    <string name="hint_txt_apellido1">Primer apellido</string>
    <string name="hint_txt_apellido2">Segundo apellido</string>
    <string name="hint_txt_telefono">Teléfono</string>
    <string name="hint_txt_contrasena">Contraseña</string>
    <string name="hint_txt_correo">Correo</string>
    <string name="hint_txt_contrasena2">Confirmar contraseña</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="reporte">Reportes</string>
    <string name="procedimientos">Procedimientos</string>
    <string name="pacientes">Pacientes</string>
    <string name="registro">Registro atención</string>
    <string name="general">Configuración general</string>
    <string name="configuracion">Configuración</string>
    <string name="salir">Salir</string>
</resources>
