<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_list_black_48dp"
            android:title="@string/registro" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_print_black_48dp"
            android:title="@string/reporte" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_recent_actors_black_48dp"
            android:title="@string/procedimientos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_supervisor_account_black_48dp"
            android:title="@string/pacientes" />

    </group>

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/configuracion" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_exit_to_app_black_48dp"
                android:title="@string/salir" />
        </menu>
    </item>

</menu>
