<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iglesias.c.registrodental.Activity.LoginActivity">

    <ImageView
        android:id="@+id/id_img_logo"
        android:layout_marginTop="@dimen/margin_top_btn_login"
        android:layout_width="@dimen/size_logo"
        android:layout_height="@dimen/size_logo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_img_logo"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_edt_user"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_til_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="@string/hint_txt_usuario"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_edt_login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_edt_user"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_til_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="@string/hint_txt_clave"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_edt_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/id_btn_login_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_btn_login"
            android:text="@string/btn_login"
            android:textColor="@color/secondaryTextColor"
            android:theme="@style/ThemeButtonLogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"

                android:gravity="end"
                android:text="@string/tag_login_no"
                android:textColor="@color/primaryTextColor"
                android:typeface="normal" />

            <TextView
                android:id="@+id/id_txt_login_registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/tag_login_registrarse"
                android:textColor="@color/colorAccent"
                android:typeface="normal" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
