<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iglesias.c.registrodental.Activity.RegistrarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_til_registrar_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_nombre1"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_nombre1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_nombre2"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_nombre2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_til_registrar_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_apellido1"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_apellido1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_apellido2"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_apellido2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_telefono"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_til_registrar_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_correo"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_til_registrar_contrasena1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_contrasena"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_contrasena1"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_edt_user"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/id_til_registrar_contrasena2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/hint_txt_contrasena2"
                    app:errorTextAppearance="@style/error_appearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_edt_registrar_contrasena2"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/id_btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_btn_login"
                android:text="@string/btn_registrar"
                android:textColor="@color/secondaryTextColor"
                android:theme="@style/ThemeButtonLogin" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
